# growgrow

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tradernet.ini.example
.claude/: settings.local.json
.claude/commands/: quality-gate.md  review.md
.claude/rules/: python-standards.md  security.md  testing-standards.md
growgrow/: __init__.py  cli.py  client.py  config.py  display.py  portfolio.py  snapshot.py
tests/: test_portfolio.py  test_snapshot.py
